<resources>
    <string name="app_name">Project</string>
    <string name="sign_in">Sign In</string>
    <string name="create">Create Account</string>
    <string name="account_text">Have an Account?</string>
    <string name="newapp">New Account?</string>
    <string name="settings">Settings</string>
    <string name="back">Return</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_text">Enter Password</string>
    <string name="email_text">Enter Email</string>
    <string name="change_password">Confirm Changes</string>
    <string name="location">Location</string>
    <string name="location_text">Enter Location</string>
    <string name="time_zone">Timezone</string>
    <string name="time_zone_text">Enter Timezone</string>
    <string name="calorie">Calorie</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fats</string>
    <string name="total_calories">Total Calories</string>
</resources>