<?xml version="1.0" encoding="utf-8"?> <!-- Copy this file and paste it in-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="509dp"
        android:layout_height="fill_parent"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="Settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:backgroundTint="@color/orangeSolid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        android:backgroundTint="@color/orangeSolid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/bg_texts"
        android:paddingLeft="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailTextView"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/bg_texts"
        android:paddingLeft="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordTextView"
        app:layout_constraintStart_toStartOf="@+id/passwordChangeButton" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:autofillHints=""
        android:text="@string/password_text"
        app:layout_constraintEnd_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:text="@string/email_text"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <Button
        android:id="@+id/passwordChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/change_password"
        android:backgroundTint="@color/orangeSolid"
        app:layout_constraintStart_toStartOf="@+id/locationEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:background="@drawable/bg_texts"
        android:paddingLeft="10dp"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/locationTextView"
        app:layout_constraintStart_toStartOf="@+id/timeZoneEditText" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="15dp"
        android:text="@string/location_text"
        app:layout_constraintEnd_toStartOf="@+id/locationEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordChangeButton" />

    <EditText
        android:id="@+id/timeZoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/time_zone"
        android:background="@drawable/bg_texts"
        android:paddingLeft="10dp"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/timeZoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_zone_text"

        app:layout_constraintBaseline_toBaselineOf="@+id/timeZoneEditText"
        app:layout_constraintEnd_toEndOf="@+id/locationTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>